# server_hosting_ds

./: .gitignore  README.md  asyncpromises.js  dump.rdb  keni_chat(1).aia  keni_chat.aia  pyproject.toml  test.html  touch.js
GAMES/valheim/: .env  Dockerfile  docker-compose.yml
GAMES/valheim/scripts/: install.sh  start.sh
dockerapp/: .pgadmin_env  .redis_env  database.yml
dockerprod/: docker-compose-stfp.yml  users.conf
dockerprod/config/: sftp.json
src/: api.py  create_order.py  custom_dataclass.py  payments.py  server.py  test.py  userroutes.py
src/api_internal/: api.py
src/api_payments/: payments.py
src/api_user/: create_order.py  helpers.py  server_actions.py  userroutes.py
src/db/: db.py
src/db/query/: query.sql
src/db/schema/: models.sql
src/game_jobs/: abstract_provisioner.py  mainProvisioner.py  provisioner_factory.py  test.py  valheimprovisioner.py
src/helper_classes/: custom_dataclass.py
src/static/css/: main.css  main.css.bak  output.css
src/static/js/: timer.js
src/templates/: allsubscriptions.html  base.html  configure.html  count.py  d.html  dashboard_full.html  dashboard_partial.html  footer.html  get_order_form.html  home.html  login.html  mods_n_backups.html  monitoring.html  new_server.html  panel.html  server_single.html  servers.html  sign_up.html  single_subscription.html  test.html
