[project]
name = "quartapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "dotenv>=0.9.9",
    "jsonschema>=4.23.0",
    "passlib>=1.7.4",
    "pydantic>=2.11.4",
    "quart>=0.20.0",
    "quart-auth>=0.11.0",
    "quart-schema>=0.22.0",
    "redis[hiredis]>=6.0.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]

lint.ignore =[
  "PLR0913"
]
